# steppingpatterns

./: .gitignore  CMakeLists.txt  README.md
data/: Sample.c3d
data/c3d/12/: 1.c3d  10.c3d  100.c3d  101.c3d  102.c3d  103.c3d  104.c3d  105.c3d  106.c3d  107.c3d  108.c3d  109.c3d  11.c3d  110.c3d  111.c3d  112.c3d  113.c3d  114.c3d  115.c3d  116.c3d  117.c3d  118.c3d  119.c3d  12.c3d  120.c3d  121.c3d  122.c3d  123.c3d  124.c3d  125.c3d  126.c3d  127.c3d  128.c3d  129.c3d  13.c3d  130.c3d  131.c3d  132.c3d  133.c3d  134.c3d  (+349 more)
data/targets/: symmetric_targets.txt  targets_ordered.txt  targets_rev_index_1.txt  targets_rev_index_10.txt  targets_rev_index_11.txt  targets_rev_index_12.txt  targets_rev_index_13.txt  targets_rev_index_14.txt  targets_rev_index_15.txt  targets_rev_index_16.txt  targets_rev_index_17.txt  targets_rev_index_18.txt  targets_rev_index_19.txt  targets_rev_index_20.txt  targets_rev_index_3.txt  targets_rev_index_4.txt  targets_rev_index_5.txt  targets_rev_index_6.txt  targets_rev_index_7.txt  targets_rev_index_8.txt  targets_rev_index_9.txt
dep/uuc3dlib/include/: basic_io.hpp  overview.hpp  skeleton_info.hpp  subjects.hpp  uuc3d.hpp
include/: C3DReader.h  MainUI.h  MarkerData.h  Sequence.h  Settings.h  StringFunc.h  Subject.h  Targets.h  Tools.h
src/: C3DReader.cpp  MainUI.cpp  MarkerData.cpp  Sequence.cpp  StringFunc.cpp  Subject.cpp  Targets.cpp  Tools.cpp  main.cpp  test.cpp
